projects++ (ldflags, cflags, pkg-config ok)
libpg ok (separate)

LIBS :
- pg_basics (text, files, ...)
- pg_vision (Gradient, conversion image...)
- pg_gtk (Gtk debug for images)

--- a/resources/Makefile
+++ b/resources/Makefile
@@ -1,7 +1,12 @@
+
+
+
+##################### don't edit below this line unless you're a GNU make's expert ! ##########
+
 all: main
 
 main: main.cpp scripts/*.h utils/*.h
-	g++ -O3 -o main main.cpp -lpthread
+	g++ -O3 -o main main.cpp -lpthread -I$(HOME)/.pgcc/includes $(CFLAGS) $(LD_FLAGS)
 	
 clean: 
 	@rm -rf main
